Added style sheet to make use divs for sidebar and content
Templates made to be in inheritance mode

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,12 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html >
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>Step 10</title>
-</head>
-<body>
-<br>
+{% extends "base.html" %}
+{% block content %}
 {% if user %}
  Добро пожаловать {{ user.nickname }}    <a href="{{logouturl}}"> выйти</a>
 <br>
@@ -16,8 +9,10 @@
 {% endif %}
 <p>
 Форма ответа на вопрросы 10 Шага .
+
 </p>
  <form action="/saveResults" method="post" >
+     {% include "submit.html" %}
  {% for question in questions %}
  <br>
      {% ifequal question.type 'bool' %}
@@ -42,15 +37,6 @@
      {% endifequal %}
  {% endfor %}
 
-
-{% if user %}
-<br><input type="submit" value="Сохранить сегодняшний самоанализ"/>
-{% else %}
-  <br>Вы не зарегестрированы, поэтому не можете сохранить свои данные.
-  <br>
-  Для сохранения данных и последующего анализа вы можете    <a href="{{loginurl}}">войти</a>   использую свою запись гмайл
-
-{% endif %}
+{% include "submit.html" %}
 </form>
-</body>
-</html>
+{% endblock %}
