--- a/templates/base.html
+++ b/templates/base.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+{% load i18n %}
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <link rel="stylesheet" href="/stylesheets/style.css" />
-    <title>{% block title %}Step-10{% endblock %}</title>
+    <title>{% block title %}{% trans "page-title" %}{% endblock %}  </title>
 </head>
 
 <body>
     <div id="sidebar">
         {% block sidebar %}
         <ul>
-            <li><a href="/">Главная</a></li>
-            <li><a href="/showMyResults">Показать мои результаты</a></li>
+            <li><a href="/">{% trans "main_page" %}</a></li>
+            <li><a href="/showMyResults">{% trans "show_my_results" %}</a></li>
         </ul>
         {% endblock %}
     </div>
