--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <link rel="stylesheet" href="/stylesheets/style.css" />
-    <title>{% block title %}{% trans "page-title" %}{% endblock %}  </title>
+    <title>{% block title %}{% trans "Step 10 " %}{% endblock %}  </title>
 </head>
 
 <body>
